--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -112,7 +112,7 @@ After calling `addProtocolIntegration`, you need to call `getProtocolLBCR` and c
 
 **Return Values**:
 
-``The``: address of the UserProxyFactory contract
+``userProxyFactoryAddress``: The address of the UserProxyFactory contract
 
 
 [[WebOfTrust-getProtocolLBCR-address-]]
@@ -124,7 +124,7 @@ After calling `addProtocolIntegration`, you need to call `getProtocolLBCR` and c
 
 **Return Values**:
 
-``The``: address of the LBCR contract of a given protocol
+``LBCR``: The address of the LBCR contract of a given protocol
 
 
 [[WebOfTrust-updateLBCR-address-address-uint256-]]
@@ -168,7 +168,7 @@ user should pay.
 
 **Return Values**:
 
-``User``: reputation, expressed as the percentage of collateral they need to pay.
+``DiscountedCollateral``: - User reputation, expressed as the percentage of collateral they need to pay.
 A return value of 900 means the agent only needs
 to pay 90% of the normally required collateral (so the result needs to be divided by 10^3).
 If the agent has not signed up with Byzantic, they need to pay the full collateral (100%)
@@ -193,7 +193,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 
 **Return Values**:
 
-``Number``: of decimals used to express the aggregate agent factor returned by `getAggregateAgentFactorForProtocol()`
+``agentFactorDecimals``: Number of decimals used to express the aggregate agent factor returned by `getAggregateAgentFactorForProtocol()`
 
 
 [[WebOfTrust-isProtocolProxy-address-]]
@@ -314,6 +314,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[UserProxy-hasEnoughFunds-address-uint256-]]
 === hasEnoughFunds(address reserve, uint256 amount) → bool (internal)
 
+**Users**: Check if an agent has at least `amount` of asset `reserve`
 
 
 
@@ -323,6 +324,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[UserProxy-withdrawFunds-address-uint256-]]
 === withdrawFunds(address _reserve, uint256 _amount) (external)
 
+**Users**: Withdraw funds from a UserProxy in Byzantic to the owner's personal account
 
 
 
@@ -332,6 +334,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[UserProxy-depositFunds-address-uint256-]]
 === depositFunds(address _reserve, uint256 _amount) (external)
 
+**Users**: Deposit funds from your account to your UserProxy in Byzantic
 
 
 
@@ -350,7 +353,18 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[UserProxy-proxyCall-address-bytes-]]
 === proxyCall(address target, bytes abiEncoding) → bool (public)
 
+**Users**: Function making calls to target protocols on behalf of users, for transactions that do not involve sending assets.
 
+
+**Developers**: The `reserve` and `amount` are set to zero and the other `proxyCall` function is called. The name "proxyCall" stands 
+for the fact that the UserProxy intermediates between a user and the target protocol.
+
+
+**Parameters**:
+
+``target``: Address of contract in target protocol to call
+
+``abiEncoding``: Encoding produced by the Target Protocol Proxy, which packs the call to the correct function and contract.
 
 
 
@@ -359,7 +373,22 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[UserProxy-proxyCall-address-bytes-address-uint256-]]
 === proxyCall(address target, bytes abiEncoding, address reserve, uint256 amount) → bool (public)
 
+**Users**: Function making calls to target protocols on behalf of users, for both asset-sending transactions and non-asset-sending ones.
 
+
+**Developers**: The name "proxyCall" stands for the fact that the UserProxy intermediates between a user and the target protocol.
+
+
+**Parameters**:
+
+``target``: Address of contract in target protocol to call
+
+``abiEncoding``: Encoding produced by the Target Protocol Proxy, which packs the call to the correct function and contract.
+
+``reserve``: Address of the asset being submitted. ETH transfers are perfoed using 
+`0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE` as the reserve. Other addresses are considered ERC-20 tokens by default 
+
+``amount``: Quantity of asset `reserve` to send along with the call
 
 
 
@@ -762,7 +791,16 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[SimpleLendingProxy-deposit-address-uint256-]]
 === deposit(address reserve, uint256 amount) (public)
 
+**Users**: Function that packs the call to the `deposit` function in `SimpleLending` as an abi enconding and then calls 
+the `msg.sender`'s `UserProxy` to call `SimpleLending` with the abi encoding
 
+
+
+**Parameters**:
+
+``reserve``: Addres of asset to deposit in `SimpleLending`
+
+``amount``: Quantity of `reserve` to deposit in `SimpleLending`
 
 
 
@@ -771,7 +809,16 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[SimpleLendingProxy-borrow-address-uint256-]]
 === borrow(address reserve, uint256 amount) (public)
 
+**Users**: Function that packs the call to the `borrow` function in `SimpleLending` as an abi enconding and then calls 
+the `msg.sender`'s `UserProxy` to call `SimpleLending` with the abi encoding
 
+
+
+**Parameters**:
+
+``reserve``: Addres of asset to borrow from `SimpleLending`
+
+``amount``: Quantity of `reserve` to borrow from `SimpleLending`
 
 
 
@@ -780,7 +827,18 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[SimpleLendingProxy-repay-address-uint256-address-]]
 === repay(address reserve, uint256 amount, address onbehalf) (public)
 
+**Users**: Function that packs the call to the `repay` function (repaying a loan) in `SimpleLending` as an abi enconding and then calls 
+the `msg.sender`'s `UserProxy` to call `SimpleLending` with the abi encoding
 
+
+
+**Parameters**:
+
+``reserve``: Addres of asset to repay to `SimpleLending`
+
+``amount``: Quantity of `reserve` to repay to `SimpleLending`
+
+``onbehalf``: User to repay the bloan on behalf of
 
 
 
@@ -789,7 +847,20 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[SimpleLendingProxy-liquidate-address-address-address-uint256-]]
 === liquidate(address borrower, address collateralReserve, address loanReserve, uint256 loanAmount) (public)
 
+**Users**: Function that packs the call to the `liquidate` function in `SimpleLending` as an abi enconding and then calls 
+the `msg.sender`'s `UserProxy` to call `SimpleLending` with the abi encoding
 
+
+
+**Parameters**:
+
+``borrower``: Addres of user to liquidate
+
+``collateralReserve``: Collateral reserve belonging to `borrower` to be paid back in as a result of the liquidation
+
+``loanReserve``: Addres of loan asset to liquidate in `SimpleLending`
+
+``loanAmount``: Quantity of `reserve` to liquidate from `SimpleLending`
 
 
 
@@ -798,7 +869,16 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[SimpleLendingProxy-redeem-address-uint256-]]
 === redeem(address reserve, uint256 amount) (public)
 
+**Users**: Function that packs the call to the `redeem` function in `SimpleLending` as an abi enconding and then calls 
+the `msg.sender`'s `UserProxy` to call `SimpleLending` with the abi encoding
 
+
+
+**Parameters**:
+
+``reserve``: Addres of asset to redeem deposited funds from `SimpleLending`
+
+``amount``: Quantity of `reserve` to redeem deposited funds from `SimpleLending`
 
 
 
@@ -964,7 +1044,14 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getCompatibilityScoreWith-address-]]
 === getCompatibilityScoreWith(address protocol) → uint256 (external)
 
+**Users**: Returns a number between 0 and 100 representing the compatibility score between the current LBCR and the 
+LBCRs of `protocol`. If no score was set for `protocol`, returns 0
 
+
+
+**Parameters**:
+
+``protocol``: Retrieve the compatibility between this protocol and `protocol`
 
 
 
@@ -973,7 +1060,18 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-setCompatibilityScoreWith-address-uint256-]]
 === setCompatibilityScoreWith(address protocol, uint256 score) (external)
 
+**Users**: Set a number between 0 and 100 representing the compatibility score between the current LBCR and the 
+LBCRs of `protocol`. When a new compatibility score is set, the `maintainCompatibilityScoreOnUpdate[protocol]` 
+is automatically set to `true` (such that when `protocol` update their LBCR version, the compatibility score 
+set now is maintained)
 
+
+
+**Parameters**:
+
+``protocol``: Address of `protocol`'s LBCR to set compatibility score with
+
+``score``: Compatibility score
 
 
 
@@ -982,6 +1080,10 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-setMaintainCompatibilityScoreOnUpdate-bool-address-]]
 === setMaintainCompatibilityScoreOnUpdate(bool maintainCompatibilityScoreOnUpdateValue, address protocol) (external)
 
+**Users**: Update the `maintainCompatibilityScoreOnUpdate` map with respect to `protocol`. A `true` value means that
+if `protocol` update their LBCR version, the current protocol trusts that the update will not be disruptive and
+the compatiblity score should remain the same. A `false` value means that new updates to the LBCR of `protocol`
+are untrusted and the compatibility score will default to zero
 
 
 
@@ -1000,6 +1102,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-incrementLatestVersion--]]
 === incrementLatestVersion() (external)
 
+**Users**: Increment `_latestVersion` to start setting parameters of a new LBCR version
 
 
 
@@ -1009,6 +1112,8 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-upgradeVersion--]]
 === upgradeVersion() (external)
 
+**Users**: Upgrade the LBCR to a new version by setting `_currentVersion` (the variable used to index the version 
+parameter maps) to `_latestVersion`
 
 
 
@@ -1027,6 +1132,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-setLayers-uint8---]]
 === setLayers(uint8[] layers) (public)
 
+**Users**: Set layer indexes
 
 
 
@@ -1036,6 +1142,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-resetLayers--]]
 === resetLayers() (external)
 
+**Users**: Reset layer indexes
 
 
 
@@ -1045,6 +1152,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-addLayer-uint256-]]
 === addLayer(uint256 layer) (external)
 
+**Users**: Add a new index to the array of layer indexes
 
 
 
@@ -1054,6 +1162,8 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getAgentFactor-address-]]
 === getAgentFactor(address agent) → uint256 (public)
 
+**Users**: Get time discounted agent factor (a value between 0 and 1), 
+representing the discounted collateral `agent` should pay
 
 
 
@@ -1063,6 +1173,8 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getFactor-uint256-]]
 === getFactor(uint256 layer) → uint256 (public)
 
+**Users**: Get the `layer` factor that the agent is currently in. Usage of this function is discouraged,
+as `getAgentFactor` provides better game theoretic incentives to behave well
 
 
 
@@ -1070,8 +1182,9 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 
 
 [[LBCR-setFactor-uint256-uint256-]]
-=== setFactor(uint256 layer, uint256 factor) → bool (public)
+=== setFactor(uint256 layer, uint256 factor) (public)
 
+**Users**: Set the collateralisation `factor` of a `layer` index. The `factor` is a value between 0 and 1
 
 
 
@@ -1085,11 +1198,15 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 
 
 
+**Return Values**:
+
+``reward``: The score an agent receives after performing a certain action. Assumes actions have fixed rewards.
 
 
 [[LBCR-setReward-uint256-uint256-]]
 === setReward(uint256 action, uint256 reward) → bool (public)
 
+**Users**: Set the `reward` for a certain `action`
 
 
 
@@ -1099,6 +1216,8 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getBounds-uint256-]]
 === getBounds(uint256 layer) → uint256, uint256 (public)
 
+**Users**: Get the pair (`lowerScoreBound`, `upperScoreBound`) representing the criteria for demoting or
+promoting an agent in the LBCR
 
 
 
@@ -1108,6 +1227,8 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-setBounds-uint256-uint256-uint256-]]
 === setBounds(uint256 layer, uint256 lower, uint256 upper) → bool (public)
 
+**Users**: Given a `layer` index, set the pair (`lowerScoreBound`, `upperScoreBound`) representing the 
+criteria for demoting or promoting an agent in the LBCR
 
 
 
@@ -1117,6 +1238,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getAssignment-address-]]
 === getAssignment(address agent) → uint256 assignment (public)
 
+**Users**: Get layer index representing the assignment of `agent` in the current LBCR round
 
 
 
@@ -1126,6 +1248,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getScore-address-]]
 === getScore(address agent) → uint256 (public)
 
+**Users**: Get the score of `agent` in the current LBCR round
 
 
 
@@ -1135,6 +1258,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-getInteractionCount-address-]]
 === getInteractionCount(address agent) → uint256 (public)
 
+**Users**: Get the number of actions performed by `agent` since joining the LBCR
 
 
 
@@ -1144,6 +1268,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-registerAgent-address-]]
 === registerAgent(address agent) → bool (external)
 
+**Users**: Sign `agent` up to the LBCR. They are initially assigned to the first layer 
 
 
 
@@ -1153,6 +1278,7 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-update-address-uint256-]]
 === update(address agent, uint256 action) (external)
 
+**Users**: Update the score of `agent` given they have performed the action encoded as `action`
 
 
 
@@ -1162,6 +1288,8 @@ If the agent has not signed up with Byzantic, they need to pay the full collater
 [[LBCR-curateIfRoundEnded--]]
 === curateIfRoundEnded() (public)
 
+**Users**: If `_blockperiod` blocks have elapsed since the current round started, the round will end
+and agents will be curated into new layer positions
 
 
 
